@@ -6,6 +6,8 @@ Changelog for 1.3.18
 * Fixed missing template for CSV pricelists (Chris T)
 * Added ODS pricelists (Chris T)
 * Better CSV escaping (Chris T, h/t Erik H)
+* Fixed menu errors preventing quote/rfq template editing (Chris T, 3524793)
+
 
 Changelog for 1.3.17
 * Address now shows on ECA selection screen (Erik H)
